kuber-homeworks/1.4/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-backend
spec:
  ports:
  - name: backend
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: backend
