kuber-homeworks/1.4/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
spec:
  ports:
  - name: frontend
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend
