kuber-homeworks/1.4/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport
spec:
  ports:
  - name: nginx
    port: 9001
    protocol: TCP
    targetPort: 80
  - name: multitool
    port: 9002
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx-multitool
  type: NodePort
