kuber-homeworks/1.4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  ingressClassName: public
  rules:
  - host: ingress.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: service-backend
            port:
              number: 80
